# turing3d

./: CMakeLists.txt  README.md
examples/: busy_beaver4  copy  langtons_ant  towers
src/: arrows.cpp  arrows.h  infinite3dArray.h  instruction.cpp  instruction.h  loader.cpp  loader.h  main.cpp  renderer.cpp  renderer.h  rulebook.cpp  rulebook.h  tape3d.cpp  tape3d.h  timer.cpp  timer.h  turingmachine3d.cpp  turingmachine3d.h  typedefs.h  vec3.h
